--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
