--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.14.5"
   }
 }
