--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "serve": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -24,8 +25,6 @@
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "connect-history-api-fallback": "^1.6.0",
-    "express": "^4.17.1",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -38,6 +37,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "typescript": "~3.7.2"
   },
   "eslintConfig": {
@@ -56,6 +56,7 @@
     ]
   },
   "engines": {
-    "node": ">=12.6.1"
+    "node": ">=12.6.1",
+    "npm": "6.14.5"
   }
 }
